--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
-      <title>Index - Laura Bootstrap Template</title>
+      <title>Index - Jessie Bootstrap Template</title>
       <meta name="description" content="">
       <meta name="keywords" content="">
 
