--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Index - Jessie Bootstrap Template</title>
-    <meta name="description" content="" />
-    <meta name="keywords" content="" />
+    <title>Jessica DiMauro Marks</title>
+    <meta name="description" content="Jessica DiMauro Marks" />
+    <meta name="keywords" content="DiMauro Dance" />
 
     <link href="assets/img/favicon.png" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
